앰 아이콘과 이름 변경

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">SWU</string>
+    <string name="app_name">SWU YOU KNOW?</string>
 
     <string name="action_bus_home">학기 중 시간표</string>
     <string name="school_column1">태릉입구->서울여대</string>
